--- a/index.css
+++ b/index.css
@@ -1,25 +1,25 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    max-width: 50%;
+    max-width: 480px;
     margin: auto;
 }
 
 h1 {
     margin-top: 30px;
     font-weight: bold;
-    font-size: 24pt;
+    font-size: 32pt;
     text-align: center;
 }
 
 .category-select-container {
     width: 500px;
     text-align: center;
-    margin-top: 25px;
+    margin: 20px auto;
 }
 
 .category-select-label {
     font-weight: bold;
-    font-size: 14pt;
+    font-size: 20pt;
     margin-right: 30px;
 }
 
@@ -46,5 +46,10 @@ h1 {
 
 .generated-word {
     font-weight: bold;
-    font-size: 20pt;
+    font-size: 24pt;
+    margin-top: 20px;
+}
+
+#all-play-label {
+    font-weight: bold;
 }
